--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1 id="title">SJC Drums Presents: The Digital DOM Drum Kit</h1>
-    <div class="set">
+    <div class="set">e
     <button class="w drum">W</button>
     <button class="a drum">A</button>
     <button class="s drum">S</button>
