--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     Original Drums made with ❤️ in Worcester County, Massachusetts. © 2024 SJC Custom Drums LLC. All Rights Reserved.
   </footer>
 
+  <script src="index.js"></script>
 </body>
 </html>
