Updated the document to where we can play sounds

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     Original Drums made with ❤️ in Worcester County, Massachusetts. © 2024 SJC Custom Drums LLC. All Rights Reserved.
   </footer>
 
-  <script src="index.js"></script>
+  <script src="index.js" charset="utf-8"></script>
 </body>
 </html>
